@startuml
skinparam classAttributeIconSize 0
skinparam linetype polyline

class DemoSupportService <<service>> {
  -extraServiceRepository : ExtraServiceRepository
  -bookingServiceItemRepository : BookingServiceItemRepository
  +calculateServiceTotal(selections : List<ServiceSelection>, slot : Slot, excludedBookingId : Long) : BigDecimal
  +validateServiceQuantity(service : ExtraService, requestedQuantity : Integer) : int
}
interface ExtraServiceRepository <<repository>> {
  +findById(id : Long) : Optional<ExtraService>
}
interface BookingServiceItemRepository <<repository>> {
  +sumReservedForOverlappingSlots(serviceId : Long, slotDate : LocalDate, startTime : LocalTime, endTime : LocalTime, statuses : List<BookingStatus>, excludedBookingId : Long) : long
}
class ExtraService <<entity>> {
  -extraServiceId : Long
  -serviceName : String
  -unitPrice : BigDecimal
  -stockQuantity : int
  -maxQuantityPerBooking : int
  -status : CommonStatus
}
class Slot <<entity>> {
  -slotDate : LocalDate
  -startTime : LocalTime
  -endTime : LocalTime
}
DemoSupportService ..> ExtraServiceRepository
DemoSupportService ..> BookingServiceItemRepository
DemoSupportService ..> Slot
ExtraServiceRepository --> ExtraService
BookingServiceItemRepository --> ExtraService
@enduml
